--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <a href="#top">Download Excursion (Coming soon!)</a>
     <div class="video">
     <video autoplay controls muted controls loop>
-    <source src="resources/videos/excursion.mp4" type="video/mp4">
+    <source src="excursion.mp4" type="video/mp4">
     </video>
     </div>
     <h2>Your personal travel guide</h2>
     <div class="p1"> Excursion remembers places you like, and recommends new points of interest around you.</div>
 
-    <p><img src="resources/images/camp.jpg" alt="camp"></p>
+    <p><img src="camp.webp" alt="camp"></p>
 
-    <p><img src="resources/images/phone.png" alt="phone graphic"></p>
+    <p><img src="phone.webp" alt="phone graphic"></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <a href="#top">Download Excursion (Coming soon!)</a>
     <p>© Excursion</p>
